[gd_scene load_steps=26 format=3 uid="uid://bklpxqva5gpl4"]

[ext_resource type="Script" uid="uid://cpe2cxphsxl6p" path="res://Player/player.gd" id="1_hg6hc"]
[ext_resource type="PackedScene" uid="uid://c3qq3qr3ynupg" path="res://Interaction/interact_ray.tscn" id="2_a51ak"]
[ext_resource type="Texture2D" uid="uid://igw23cgxdnwm" path="res://Player/UI Images/simple-01.png" id="3_8q8j3"]
[ext_resource type="Script" uid="uid://c7s2i6ywkah8a" path="res://Player/user_interface.gd" id="3_jxhqb"]
[ext_resource type="Texture2D" uid="uid://cnuv7c0g27gkt" path="res://Player/UI Images/dmg.png" id="4_trktn"]
[ext_resource type="Texture2D" uid="uid://cmf01l3fisypb" path="res://Player/UI Images/rsz_cross.png" id="6_lwqn2"]
[ext_resource type="Texture2D" uid="uid://b5ih0tpabjbqp" path="res://Player/UI Images/rsz_cross2.png" id="7_kl4vd"]
[ext_resource type="PackedScene" uid="uid://c2udlk8edmfs" path="res://vhs.tscn" id="8_s1rgi"]
[ext_resource type="FontFile" uid="uid://b408igj3ynf03" path="res://Futura Std Light.otf" id="8_v0k0e"]
[ext_resource type="AudioStream" uid="uid://kbwyxqossgka" path="res://Sound/SFX/414326__unlistenable__walking_1.wav" id="9_0j2ni"]
[ext_resource type="AudioStream" uid="uid://cmu1tiejqhtky" path="res://Sound/SFX/flashlight click.wav" id="9_j23h2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5bmql"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dur45"]
resource_local_to_scene = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vlldt"]
resource_local_to_scene = true
height = 1.12639

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5wa8t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7tob"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dm7nj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3mea3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7v5gs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8sa4y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3nb2p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7xyo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_evw08"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_roy6y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u5tep"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_hg6hc")
normal_speed = 5.5
jump = 5.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.576644, 0.869157, -0.532235)
visible = false
mesh = SubResource("CapsuleMesh_5bmql")

[node name="Standing_Collision_Shape" type="CollisionShape3D" parent="."]
auto_translate_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.572507, 0.869494, -0.534173)
shape = SubResource("CapsuleShape3D_dur45")

[node name="Crouching_Collision_Shape" type="CollisionShape3D" parent="."]
auto_translate_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.572507, 0.429465, -0.534173)
shape = SubResource("CapsuleShape3D_vlldt")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.572601, 1.73595, -0.508115)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00887346, -0.0189769, -0.438255)
fov = 90.0

[node name="InteractRay" parent="Head/Camera3D" instance=ExtResource("2_a51ak")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00396228, -0.0298914, 0.149494)
target_position = Vector3(0, 0, -2)
collision_mask = 1

[node name="Node3D" type="Node3D" parent="Head/Camera3D"]

[node name="Flashlight" type="SpotLight3D" parent="Head/Camera3D/Node3D"]
light_color = Color(0.87554, 0.787491, 0.764299, 1)
light_energy = 16.0
light_volumetric_fog_energy = 0.1
shadow_enabled = true
distance_fade_enabled = true
spot_range = 15.0
spot_attenuation = 0.1
spot_angle = 30.0
spot_angle_attenuation = 3.0

[node name="TouchingGround" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.548548, 0.82637, -0.535095)

[node name="TopCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.574063, -0.0465519, -0.535269)
target_position = Vector3(0, 2, 0)

[node name="UI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_jxhqb")

[node name="CrossHair" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -31.5
offset_right = 38.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8q8j3")
expand_mode = 1

[node name="HurtOverlay" type="TextureRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = -9.0
offset_top = -12.0
offset_right = 1184.0
offset_bottom = 679.0
texture = ExtResource("4_trktn")

[node name="HealthBar" type="TextureProgressBar" parent="UI"]
visible = false
layout_mode = 0
offset_left = -7.0
offset_top = 518.0
offset_right = 160.0
offset_bottom = 614.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("6_lwqn2")
texture_progress = ExtResource("7_kl4vd")

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]
follow_viewport_enabled = true

[node name="Pause Menu" type="Control" parent="UI/CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -68.0
offset_right = 72.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="BG" type="ColorRect" parent="UI/CanvasLayer/Pause Menu"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
offset_left = -26.0
offset_top = -61.0
offset_right = 172.0
offset_bottom = 172.0
color = Color(0.0923971, 0.0923971, 0.0923971, 0.52549)

[node name="Resume" type="Button" parent="UI/CanvasLayer/Pause Menu"]
layout_mode = 2
offset_top = 4.0
offset_right = 145.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("8_v0k0e")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5wa8t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_p7tob")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dm7nj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3mea3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7v5gs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8sa4y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3nb2p")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_d7xyo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_evw08")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_roy6y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u5tep")
text = "Resume
"

[node name="MainMenu" type="Button" parent="UI/CanvasLayer/Pause Menu"]
layout_mode = 2
offset_top = 39.0
offset_right = 145.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("8_v0k0e")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5wa8t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_p7tob")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dm7nj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3mea3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7v5gs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8sa4y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3nb2p")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_d7xyo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_evw08")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_roy6y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u5tep")
text = "Main Menu
"

[node name="Quit" type="Button" parent="UI/CanvasLayer/Pause Menu"]
layout_mode = 2
offset_top = 74.0
offset_right = 145.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("8_v0k0e")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5wa8t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_p7tob")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dm7nj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3mea3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7v5gs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8sa4y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3nb2p")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_d7xyo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_evw08")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_roy6y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u5tep")
text = "Quit

"

[node name="VHS" parent="UI/CanvasLayer" instance=ExtResource("8_s1rgi")]

[node name="Sounds" type="Node" parent="."]

[node name="walking_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_0j2ni")
volume_db = -7.429
bus = &"SFX"

[node name="flashlight_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_j23h2")
bus = &"SFX"

[connection signal="pressed" from="UI/CanvasLayer/Pause Menu/Resume" to="UI" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Pause Menu/MainMenu" to="UI" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Pause Menu/Quit" to="UI" method="_on_quit_pressed"]
